--- a/index.html
+++ b/index.html
@@ -1,33 +1,74 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
 <head>
-    <title>My web page</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./style.css">
+
+    <title>Hello, world!</title>
 </head>
 
+
 <body>
-    <h1 class="brand-header">Hello there2222</h1>
-    <p>I am a cat</p>
-    <p>Here is another paragraph</p>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand ml-5" href="./index.html">John Kuefler</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./about-me.html">About Me</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
 
-    <div class="blue-bg">
-        <a target="_blank" href="https://google.com">Go to Google!</a>
+
+
+    <div class="container">
+        <h1 class="brand-header">Hello there2222</h1>
+        <p>I am a cat</p>
+        <p>Here is another paragraph</p>
+
+        <div class="blue-bg">
+            <a target="_blank" href="https://google.com">Go to Google!</a>
+        </div>
+        <div>
+            <a href="./about-me.html">About me</a>
+        </div>
+
+        <ul>
+            <li>Item 1</li>
+            <li>Item 2</li>
+        </ul>
+
+        <ol>
+            <li>Item 1</li>
+            <li>Item 2</li>
+        </ol>
+        <img src="./images/cat.jpg" width="600px" />
     </div>
-    <div>
-        <a href="./about-me.html">About me</a>
-    </div>
-
-    <ul>
-        <li>Item 1</li>
-        <li>Item 2</li>
-    </ul>
-
-    <ol>
-        <li>Item 1</li>
-        <li>Item 2</li>
-    </ol>
-    <img src="./images/cat.jpg" width="600px" />
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
