--- a/about-me.html
+++ b/about-me.html
@@ -14,7 +14,23 @@
     <title>Hello, world!</title>
 </head>
 
-<body>
+<body class="nice-bg">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand ml-5" href="./index.html">John Kuefler</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./about-me.html">About Me</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
 
     <div class="container mt-5 card border-0 shadow my-5">
         <h1>John Kuefler</h1>
